--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
-.idea
-.DS_Store
+*.log
+*.pyc
+.cache/
+.coverage
+.idea/
+.vscode/
+bot_python_sdk.egg-info/
+build/
+dist/
+docs/build/
+venv/
+wheelhouse/
+config.py
+qr.png
+actions.py
+last_triggered.py
