--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ gunicorn==19.9.0
 idna==2.7
 pycparser==2.18
 PyJWT==1.6.4
-pymaging==0.1
-pymaging-png==0.1
+git+git://github.com/ojii/pymaging.git#egg=pymaging
+git+git://github.com/ojii/pymaging-png.git#egg=pymaging-png
 pyOpenSSL==18.0.0
 python-mimeparse==1.6.0
 qrcode==6.0
