--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ git+git://github.com/ojii/pymaging.git#egg=pymaging
 git+git://github.com/ojii/pymaging-png.git#egg=pymaging-png
 pyOpenSSL==18.0.0
 python-mimeparse==1.6.0
+pytest==3.7.2
 qrcode==6.0
 requests==2.19.1
 six==1.11.0
