--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,9 @@ requests==2.20.0
 requests-toolbelt==0.8.0
 six==1.11.0
 urllib3==1.23
+pybleno==0.10
+psutil==5.6.2
+future==0.17.1
+psutil==5.6.2
+netifaces==0.10.9
+
