--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ pycparser==2.18
 PyJWT==1.6.4
 git+git://github.com/ojii/pymaging.git#egg=pymaging
 git+git://github.com/ojii/pymaging-png.git#egg=pymaging-png
+git+git://github.com/Adam-Langley/pybleno.git#egg=pybleno
 pyOpenSSL==18.0.0
 python-mimeparse==1.6.0
 pytest==3.7.2
@@ -17,8 +18,7 @@ qrcode==6.0
 requests==2.20.0
 requests-toolbelt==0.8.0
 six==1.11.0
-urllib3==1.23
-pybleno==0.10
+urllib3==1.24.2
 psutil==5.6.2
 future==0.17.1
 psutil==5.6.2
