--- a/requirements.txt
+++ b/requirements.txt
@@ -19,8 +19,7 @@ requests==2.20.0
 requests-toolbelt==0.8.0
 six==1.11.0
 urllib3==1.24.2
-psutil==5.6.2
 future==0.17.1
-psutil==5.6.2
+#psutil==5.6.2
 netifaces==0.10.9
 
